--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <div class="header d-flex align-items-center">
         <div class="container">
             <div class="row d-flex align-items-center ">
-                <div class="col-lg-4   home-main text-white">
-                  <div class="item">
+                <div class="col-lg-4  mt-5  home-main text-white">
+                  <div class="item pt-4">
                         <h1>Your Solution Legal Consultancy</h1>
                         <p>We are here to help you take care of your legality with the best service especially for you.</p>
                         <button class="border-0 text-white py-3 px-5"> GET STARTED</button>
@@ -255,7 +255,7 @@
             <h6 class="text-color">our team</h6>
             <h3>Meet our Lawyers</h3>
             <div class="row py-5">
-                <div class="col-xl-3 col-md-6 mb-md-4 mb-sm-4">
+                <div class="col-xl-3 col-md-6 mb-md-4 mb-sm-4 mb-lg-0 mb-4">
                     <div class="team-item position-relative  mb-sm-3">
                         <img src="image/member01.webp" class="w-100" alt="lawyer">
                         <div class="item-desc bg-white w-75 m-auto ">
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 mb-md-4 mb-sm-4">
+                <div class="col-xl-3 col-md-6 mb-md-4 mb-sm-4 mb-lg-0 mb-4">
                     <div class="team-item position-relative  mb-sm-3">
                         <img src="image/member02.webp" class="w-100" alt="lawyer">
                         <div class="item-desc bg-white w-75 m-auto ">
@@ -271,8 +271,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-md-6 mb-md-4 mb-sm-4">
-                    <div class="team-item position-relative  mb-sm-3">
+                <div class="col-xl-3 col-md-6 mb-lg-0 mb-md-4 mb-sm-4 mb-4">
+                    <div class="team-item position-relative  mb-sm-3 ">
                         <img src="image/member03.webp" class="w-100" alt="lawyer">
                         <div class="item-desc bg-white w-75 m-auto ">
                             <h5>Ali Mohamed <span class="text-color">Senior Lawyer</span> </h5>
