--- a/about.html
+++ b/about.html
@@ -76,10 +76,10 @@
     <i class="fa-solid fa-angle-right"></i>
     <span>About Us</span>
 
-
+<!-- 
     <div class="fixed-btn position-fixed bottom-0 end-0 m-1">
             <button><a href="#">Top</a></button>
-        </div>
+        </div> -->
 </header>
 <section class="about-us py-5 bg-white ">
     <div class="container">
@@ -179,14 +179,14 @@
                               <h5>85%</h5>
                             
                             </div>
-                            <h4 class="text-center">Legal Methods</h4>
+                            <h4 class="text-center me-1">Legal Methods</h4>
                         </div>
                         <div>
                             <div class="border-range me-1 d-flex  justify-content-center align-items-center ">
                               <h5>85%</h5>
                             
                             </div>
-                            <h4 class="text-center">Domestic Violence</h4>
+                            <h4 class="text-center me-1">Domestic Violence</h4>
                         </div>
                         <div>
                             <div class="border-range d-flex justify-content-center align-items-center ">
