--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 </div>
             </div>
         </div>
-        <div class="fixed-btn position-fixed bottom-0 end-0 m-1">
+        <!-- <div class="fixed-btn position-fixed bottom-0 end-0 m-1">
             <button><a href="#">Top</a></button>
-        </div>
+        </div> -->
     </div>
 
     <section class="about text-white d-flex align-items-center">
