--- a/contact.html
+++ b/contact.html
@@ -79,9 +79,9 @@
     <span>Contacts</span>
 
 
-    <div class="fixed-btn position-fixed bottom-0 end-0 m-1">
+    <!-- <div class="fixed-btn position-fixed bottom-0 end-0 m-1">
             <button><a href="#">Top</a></button>
-        </div>
+        </div> -->
 </header>
 
 <section class="contact-media py-5">
